// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DisplayWrappers|NavBar/LinkWrapper Standard 1`] = `
<nav
  className="sc-bxivhb dGSKYG"
>
  <a
    className="sc-htpNat dMSOBO sc-bxivhb dGSKYG"
  >
    HOME
  </a>
  <a
    className="sc-htpNat dMSOBO sc-bxivhb dGSKYG"
  >
    CAUSES
  </a>
  <a
    className="sc-htpNat dMSOBO sc-bxivhb dGSKYG"
  >
    POSTS
  </a>
  <a
    className="sc-htpNat dMSOBO sc-bxivhb dGSKYG"
  >
    PROFILE
  </a>
</nav>
`;

exports[`Storyshots DisplayWrappers|NavBar/LogoWrapper Standard 1`] = `
<div
  className="sc-ifAKCX bZXLIA"
>
  <svg>
    Logo.svg
  </svg>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBar Standard 1`] = `
<div
  className="sc-VigVT elEyIh"
>
  <div
    className="sc-EHOje kOcwsO"
  >
    <div
      className="sc-ifAKCX bZXLIA sc-EHOje kOcwsO"
    >
      <svg>
        Logo.svg
      </svg>
    </div>
    <nav
      className="sc-bxivhb dGSKYG sc-EHOje kOcwsO"
    >
      <a
        className="sc-htpNat dMSOBO sc-bxivhb dGSKYG sc-EHOje kOcwsO"
      >
        HOME
      </a>
      <a
        className="sc-htpNat dMSOBO sc-bxivhb dGSKYG sc-EHOje kOcwsO"
      >
        CAUSES
      </a>
      <a
        className="sc-htpNat dMSOBO sc-bxivhb dGSKYG sc-EHOje kOcwsO"
      >
        POSTS
      </a>
      <a
        className="sc-htpNat dMSOBO sc-bxivhb dGSKYG sc-EHOje kOcwsO"
      >
        PROFILE
      </a>
    </nav>
  </div>
  <div
    className="sc-bwzfXH ilzmva"
  >
    <input
      className="sc-bdVaJa bGHooc"
      placeholder="Search"
      placeholer="Search"
      type="text"
    />
  </div>
  <div
    className="sc-gqjmRU cgcBHJ"
  >
    <div
      className="sc-gzVnrw bhQPgz"
    >
      <button
        className="sc-bZQynM bKeyVQ"
      >
        SIGN UP
      </button>
      <button
        className="sc-bZQynM etdfXU"
      >
        LOG IN
      </button>
    </div>
    <div
      className="sc-gZMcBi KIzcV"
    >
      <div
        className="sc-iwsKbI eFRUyw"
      >
        <svg>
          Userpic.svg
        </svg>
      </div>
      <div
        className="sc-dnqmqq dkzfjo"
      >
        <div
          className="sc-htoDjs haDExK"
        >
          James Wheeler
        </div>
        <div
          className="sc-htoDjs ZUubs"
        >
          larkin_tr***@yahoo.com
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarCentre C 1`] = `
<div
  className="sc-bwzfXH ilzmva"
>
  <input
    className="sc-bdVaJa bGHooc"
    placeholder="Search Causes"
    placeholer="Search Causes"
    type="text"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarCentre C&P 1`] = `
<div
  className="sc-bwzfXH ilzmva"
>
  <input
    className="sc-bdVaJa bGHooc"
    placeholder="Search Causes and Posts"
    placeholer="Search Causes and Posts"
    type="text"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarCentre P 1`] = `
<div
  className="sc-bwzfXH ilzmva"
>
  <input
    className="sc-bdVaJa bGHooc"
    placeholder="Search Posts"
    placeholer="Search Posts"
    type="text"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarCentre Standard 1`] = `
<div
  className="sc-bwzfXH ilzmva"
>
  <input
    className="sc-bdVaJa bGHooc"
    placeholder="Search"
    placeholer="Search"
    type="text"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarLeft Standard 1`] = `
<div
  className="sc-EHOje kOcwsO"
>
  <div
    className="sc-ifAKCX bZXLIA sc-EHOje kOcwsO"
  >
    <svg>
      Logo.svg
    </svg>
  </div>
  <nav
    className="sc-bxivhb dGSKYG sc-EHOje kOcwsO"
  >
    <a
      className="sc-htpNat dMSOBO sc-bxivhb dGSKYG sc-EHOje kOcwsO"
    >
      HOME
    </a>
    <a
      className="sc-htpNat dMSOBO sc-bxivhb dGSKYG sc-EHOje kOcwsO"
    >
      CAUSES
    </a>
    <a
      className="sc-htpNat dMSOBO sc-bxivhb dGSKYG sc-EHOje kOcwsO"
    >
      POSTS
    </a>
    <a
      className="sc-htpNat dMSOBO sc-bxivhb dGSKYG sc-EHOje kOcwsO"
    >
      PROFILE
    </a>
  </nav>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarRight Standard 1`] = `
<div
  className="sc-gqjmRU cgcBHJ"
>
  <div
    className="sc-gzVnrw bhQPgz"
  >
    <button
      className="sc-bZQynM bKeyVQ"
    >
      SIGN UP
    </button>
    <button
      className="sc-bZQynM etdfXU"
    >
      LOG IN
    </button>
  </div>
  <div
    className="sc-gZMcBi KIzcV"
  >
    <div
      className="sc-iwsKbI eFRUyw"
    >
      <svg>
        Userpic.svg
      </svg>
    </div>
    <div
      className="sc-dnqmqq dkzfjo"
    >
      <div
        className="sc-htoDjs haDExK"
      >
        James Wheeler
      </div>
      <div
        className="sc-htoDjs ZUubs"
      >
        larkin_tr***@yahoo.com
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/ProfileImageWrapper Standard 1`] = `
<div
  className="sc-iwsKbI eFRUyw"
>
  <svg>
    Userpic.svg
  </svg>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/ProfileInfoWrapper Standard 1`] = `
<div
  className="sc-dnqmqq dkzfjo"
>
  <div
    className="sc-htoDjs haDExK"
  >
    James Wheeler
  </div>
  <div
    className="sc-htoDjs ZUubs"
  >
    larkin_tr***@yahoo.com
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/ProfileWrapper Standard 1`] = `
<div
  className="sc-gZMcBi KIzcV"
>
  <div
    className="sc-iwsKbI eFRUyw"
  >
    <svg>
      Userpic.svg
    </svg>
  </div>
  <div
    className="sc-dnqmqq dkzfjo"
  >
    <div
      className="sc-htoDjs haDExK"
    >
      James Wheeler
    </div>
    <div
      className="sc-htoDjs ZUubs"
    >
      larkin_tr***@yahoo.com
    </div>
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/SignUpInButtonWrapper Standard 1`] = `
<div
  className="sc-gzVnrw bhQPgz"
>
  <button
    className="sc-bZQynM bKeyVQ"
  >
    SIGN UP
  </button>
  <button
    className="sc-bZQynM etdfXU"
  >
    LOG IN
  </button>
</div>
`;

exports[`Storyshots Primitive|/Buttons/ProfileInfoNavBar Login 1`] = `
<button
  className="sc-bZQynM etdfXU"
>
  LOG IN
</button>
`;

exports[`Storyshots Primitive|/Buttons/ProfileInfoNavBar SignUp 1`] = `
<button
  className="sc-bZQynM bKeyVQ"
>
  SIGN UP
</button>
`;

exports[`Storyshots Primitive|/Buttons/ProfileInfoNavBar Standard 1`] = `
<button
  className="sc-bZQynM etdfXU"
/>
`;

exports[`Storyshots Primitive|/Text/ProfileInfoNavBar ProfileEmail 1`] = `
<div
  className="sc-htoDjs dfBkuE"
>
  larkin_tr***@yahoo.com
</div>
`;

exports[`Storyshots Primitive|/Text/ProfileInfoNavBar ProfileName 1`] = `
<div
  className="sc-htoDjs fkMuCz"
>
  James Wheeler
</div>
`;

exports[`Storyshots Primitive|/Text/ProfileInfoNavBar Standard 1`] = `
<div
  className="sc-htoDjs fCdwiU"
>
  Standard
</div>
`;

exports[`Storyshots Primitive|Images/ProfileImage Standard 1`] = `
<img
  className="sc-jTzLTM ccMzdV"
/>
`;

exports[`Storyshots Primitive|Inputs/SearchBar C 1`] = `
<input
  className="sc-bdVaJa bGHooc"
  placeholder="Search Causes"
  placeholer="Search Causes"
  type="text"
/>
`;

exports[`Storyshots Primitive|Inputs/SearchBar C&P 1`] = `
<input
  className="sc-bdVaJa bGHooc"
  placeholder="Search Causes and Posts"
  placeholer="Search Causes and Posts"
  type="text"
/>
`;

exports[`Storyshots Primitive|Inputs/SearchBar P 1`] = `
<input
  className="sc-bdVaJa bGHooc"
  placeholder="Search Posts"
  placeholer="Search Posts"
  type="text"
/>
`;

exports[`Storyshots Primitive|Inputs/SearchBar Standard 1`] = `
<input
  className="sc-bdVaJa bGHooc"
  placeholder="Search"
  placeholer="Search"
  type="text"
/>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Causes 1`] = `
<a
  className="sc-htpNat dMSOBO"
>
  CAUSES
</a>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Home 1`] = `
<a
  className="sc-htpNat dMSOBO"
>
  HOME
</a>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Posts 1`] = `
<a
  className="sc-htpNat dMSOBO"
>
  POSTS
</a>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Profile 1`] = `
<a
  className="sc-htpNat dMSOBO"
>
  PROFILE
</a>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Standard 1`] = `
<a
  className="sc-htpNat dMSOBO"
>
  TEST
</a>
`;
